--- a/src/atcsLogManager/project.json
+++ b/src/atcsLogManager/project.json
@@ -1,19 +1,26 @@
-﻿{
-  "version": "1.0.0-*",
-  "buildOptions": {
-    "emitEntryPoint": true
-  },
+{
+    "version": "1.0.0-*",
+    "buildOptions": {
+        "emitEntryPoint": true
+    },
 
-  "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
-  },
+    "dependencies": {
+      "Microsoft.NETCore.App": {
+        "version": "1.0.1"
+      },
+      "System.Runtime.Serialization.Json": "4.0.1",
+      "System.Runtime.Serialization.Primitives": "4.1.1"
+    },
 
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
+    "frameworks": {
+        "netcoreapp1.0": {
+            "imports": "dnxcore50"
+        }
+    },
+
+    "runtimes": {
+        "win10-x64": {},
+        "osx.10.10-x64": {},
+        "ubuntu.14.04-x64": {}
     }
-  }
 }
