--- a/src/atcsLogManager/project.json
+++ b/src/atcsLogManager/project.json
@@ -20,6 +20,7 @@
 
     "runtimes": {
         "win10-x64": {},
+        "win181-x64": {},
         "osx.10.10-x64": {},
         "ubuntu.14.04-x64": {}
     }
