Updated the LogFileManagerTests acceptance tests.  Do not have unit tests per-se as I have too much mixing of the file system in the ATCSLogFile class.  Refactored some of the core logic for archiving a file in ATCSLogFile, and changed the method comment approach (again).

--- a/src/atcsLogManager/Properties/launchSettings.json
+++ b/src/atcsLogManager/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "atcsLogManager": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\erben\\Dropbox\\programming\\atcsLogManager\\testData"
+      "commandLineArgs": "C:\\Users\\erben\\Dropbox\\programming\\atcsLogManager\\testDatab"
     }
   }
 }
